--- a/css/style1.css
+++ b/css/style1.css
@@ -40,7 +40,7 @@ html{
 
 body{
     color: var(--color-fg);
-    font-size: 3em;
+    font-size: 2.8em;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
@@ -57,17 +57,18 @@ body{
 
 /* Typograpy */
 h1{
-    font-size: 3.2em;
+    font-size: 3.5em;
     /*font-family: 'Clockwise', sans-serif;*/
     font-family: 'Josefin Sans', sans-serif;
     font-weight: lighter;
 }
 
 .subtitle{
-    font-size: 1em;
+    font-size: 1.2em;
     padding-top: 0.4em;
     text-transform: uppercase;
     font-weight: bolder;
+    letter-spacing: 5px;
 }
 
 h2{
@@ -78,16 +79,23 @@ h2{
 }
 
 h3{
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-family: 'Clockwise', sans-serif;
     font-weight: lighter;
     padding-bottom: 0.5em;
 }
 
 h4{
+    font-size: 0.8em;
+    line-height: 150%;
+    padding-bottom: 0.5em;
+}
+
+h5{
     text-align: left;
-    font-size: 1.4em;
-    font-weight: bolder;
+    font-size: 0.5em;
+    line-height: 150%;
+    text-decoration: underline;
     padding-bottom: 0.5em;
 }
 
@@ -99,7 +107,7 @@ a{
 
 p{
     text-align: left;
-    font-size: 0.6em;
+    font-size: 0.5em;
     line-height: 150%;
     padding-bottom: 0.5em;
 }
@@ -205,7 +213,6 @@ section{
 .button {
     width: calc(100% - 1em);
     padding: var(--grid-padding);
-    font-size: 1.2em;
     font-family: 'Clockwise', sans-serif;
     font-weight: lighter;
     box-shadow: var(--button-shadow);
@@ -213,11 +220,12 @@ section{
 }
 
 .button > i{
+    font-size: 1.4em;
     padding-bottom: var(--grid-padding);
 }
 
 .button > div{
-    font-size: 0.6em;
+    font-size: 0.8em;
 }
 
 .card {
@@ -236,7 +244,7 @@ section{
     width: 80%;
 }
 
-.card p{
+.card p, .card h4, .card h5{
     padding-left: var(--grid-padding);
 }
 
