--- a/css/style1.css
+++ b/css/style1.css
@@ -122,6 +122,10 @@ nav {
     z-index: 3;
 }
 
+nav h1{
+    font-size: var(--navbar-font);
+}
+
 nav .icon-spacer{
     display: inline-block;
     width: var(--navbar-margin);
@@ -162,7 +166,6 @@ nav .icon-spacer{
     top: 0;
     padding: calc(2 * var(--grid-padding));
     z-index: 4;
-    box-shadow: var(--button-shadow);
 }
 
 #sidebar ul{
@@ -319,6 +322,9 @@ img{
 .bg-light{background-color: var(--color-accent-light);}
 .bg-dark{background-color: var(--color-accent-dark);}
 .bg-transparent{background-color: var(--color-transparent-bg)}
+
+.shadow1{box-shadow: var(--button-shadow);}
+.shadow2{box-shadow: var(--main-bg-shadow);}
 
 /* Desktop */
 @media only screen and (min-width: 1000px) {
