--- a/css/style1.css
+++ b/css/style1.css
@@ -261,7 +261,7 @@ footer .social-icon{
 
 .lcr{ /* Left-center-right */
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: max-content auto max-content;
 }
 
 .lcr > div{width: 100%}
